# case-rate

./: .gitignore  MANIFEST.in  Makefile  README.md  algorithm.ipynb  case-rate.toml  config.toml  dashboard.js  details-Canada.html  details-US.html  details.html  details.js  environment.yml  index.html  modelling.toml  package-lock.json  package.json  render_template.py  setup.cfg  style.css  tailwind.config.js  tsconfig.json  webpack.config.js
.github/workflows/: build.yml  generate-report.yml  smoke-test.yml
_analysis/: Canada.json  Canada_Alberta.json  Canada_British Columbia.json  Canada_Manitoba.json  Canada_New Brunswick.json  Canada_Newfoundland and Labrador.json  Canada_Northwest Territories.json  Canada_Nova Scotia.json  Canada_Nunavut.json  Canada_Ontario.json  Canada_Prince Edward Island.json  Canada_Quebec.json  Canada_Saskatchewan.json  Canada_Yukon.json  US.json  analysis.json
css/: style.css
scripts/: update-gh-pages.sh
src/case_rate/: __init__.py  _types.py  _version.py  cli.py  dashboard.py  dataset.py  filters.py  plotting.py  report.py  storage.py  timeseries.py
src/case_rate/analysis/: __init__.py  least_squares.py  operations.py  predict.py  timeseries.py
src/case_rate/cli/: _helpers.py  analyze.py  cli.py  info.py  model.py  modelling.py  (+2 more)
src/dashboard/: analysis.ts  colourTheme.ts  plotting.ts  timeseries.ts  utilities.ts
templates/: base.jinja2  dashboard.jinja2  details.jinja2
tests/case_rate/: test_filters.py  test_least_squares.py  test_network.py  test_storage.py  test_types.py
web/: gulpfile.js  package-lock.json  package.json  render.py  tsconfig.json
web/css/: style.css
web/html/: base.jinja2  report.jinja2
web/src/: analysis.ts  report.ts  timeseries.ts  utilities.ts
(+16 files in other folders)
