[metadata]
name = case-rate
license = BSD 3-Clause license
version = attr:case_rate._version.VERSION

[options]
include_package_data = True
package_dir =
    =src
packages = find:
install_requires =
    bokeh
    click
    jinja2
    numpy
    requests
    scipy
    toml

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    covid19 = case_rate.cli:main

[options.extras_require]
dev =
    flake8
    mypy
    numpy-stubs @ git+https://github.com/numpy/numpy-stubs
    pytest

# Add '-f https://download.pytorch.org/whl/torch_stable.html' when calling pip
# in order to find this dependency.
modelling =
    torch==1.5.0+cpu
